--- a/apps.json
+++ b/apps.json
@@ -51,6 +51,18 @@
         "pkg": "evolution"
       },
       {
+        "name": "Sylpheed",
+        "icon": "sylpheed",
+        "description": "Open Source E-mail application",
+        "pkg": "thunderbird"
+      },
+      {
+        "name": "Claws",
+        "icon": "claws-mail",
+        "description": "Open Source Mozilla PIM application",
+        "pkg": "thunderbird"
+      },
+      {
         "name": "Thunderbird",
         "icon": "thunderbird",
         "description": "Open Source Mozilla PIM application",
