--- a/app-utility.desktop
+++ b/app-utility.desktop
@@ -1,8 +1,8 @@
 [Desktop Entry]
 Version=0.1
 Type=Application
-Name=Application Utility
-Comment=Openbox Application Utility
+Name=Manjaro Application Utility
+Comment=Manjaro Application Utility
 Categories=Utility;
 Exec=app-utility
 Icon=system-software-install
