--- a/apps.json
+++ b/apps.json
@@ -1,6 +1,6 @@
 [
   {
-    "name": "Internet",
+    "name": "Internet -Browsers",
     "icon": "applications-internet",
     "description": "Browsers, Email, Files, Chat",
     "apps": [
@@ -8,114 +8,153 @@
         "name": "Chromium",
         "icon": "chromium",
         "description": "Open Source version of Chrome Browser",
-        "pkg": "chromium"
+        "pkg": "chromium",
+        "extra": []
       },
       {
         "name": "Falkon",
         "icon": "falkon",
         "description": "Qt based Open Source Web Browser",
-        "pkg": "falkon"
+        "pkg": "falkon",
+        "extra": []
       },
       {
         "name": "Firefox",
         "icon": "firefox",
         "description": "Mozilla Web Browser",
-        "pkg": "firefox"
+        "pkg": "firefox",
+        "extra": []
       },
       {
         "name": "Midori",
         "icon": "midori",
         "description": "Open Source Web Browser",
-        "pkg": "midori"
+        "pkg": "midori",
+        "extra": []
       },
       {
         "name": "Netsurf",
         "icon": "netsurf",
         "description": "Light and Fast Web Browser",
-        "pkg": "netsurf"
+        "pkg": "netsurf",
+        "extra": []
       },
       {
         "name": "Opera",
         "icon": "opera",
         "description": "Open Source Web Browser",
-        "pkg": "opera"
-      },
+        "pkg": "opera",
+        "extra": []
+      }
+    ]
+  },
+  {
+    "name": "Internet - E-mail",
+    "icon": "applications-internet",
+    "description": "Browsers, Email, Files, Chat",
+    "apps": [
       {
-        "name": "Claws",
+        "name": "Claws Mail",
         "icon": "claws-mail",
-        "description": "Open Source Mozilla PIM application",
-        "pkg": "claws-mail"
+        "description": "Open Source E-mail application",
+        "pkg": "claws-mail",
+        "extra": []
       },
       {
         "name": "Evolution",
         "icon": "evolution",
-        "description": "Open Source Gnome PIM application",
-        "pkg": "evolution"
+        "description": "Gnome PIM application",
+        "pkg": "evolution",
+        "extra": []
       },
       {
         "name": "Geary",
         "icon": "geary",
         "description": "GTK based Open Source Email Client",
-        "pkg": "geary"
+        "pkg": "geary",
+        "extra": []
       },
       {
         "name": "Sylpheed",
         "icon": "sylpheed",
         "description": "Open Source E-mail application",
-        "pkg": "sylpheed"
+        "pkg": "sylpheed",
+        "extra": []
       },
       {
         "name": "Thunderbird",
         "icon": "thunderbird",
         "description": "Open Source Mozilla PIM application",
-        "pkg": "thunderbird"
-      },
+        "pkg": "thunderbird",
+        "extra": []
+      }
+    ]
+  },
+  {
+    "name": "Internet - Chat",
+    "icon": "applications-internet",
+    "description": "Browsers, Email, Files, Chat",
+    "apps": [
       {
         "name": "HexChat",
         "icon": "hexchat",
-        "description": "IRC Client",
-        "pkg": "hexchat"
+        "description": "Graphic IRC Client",
+        "pkg": "hexchat",
+        "extra": []
       },
       {
         "name": "Pidgin",
         "icon": "pdgin",
-        "description": "Multi protocol IRC Client",
-        "pkg": "pidgin"
-      },
+        "description": "Multi protocol Chat Client",
+        "pkg": "pidgin",
+        "extra": []
+      }
+    ]
+  },
+  {
+    "name": "Internet - File sharing",
+    "icon": "applications-internet",
+    "description": "Browsers, Email, Files, Chat",
+    "apps": [
       {
         "name": "Filezilla",
         "icon": "filezilla",
         "description": "Graphical FTP/SFTP browser",
-        "pkg": "filezilla"
+        "pkg": "filezilla",
+        "extra": []
       },
       {
         "name": "qBittorrent",
         "icon": "qbittorrent",
         "description": "A Qt based Bittorrent Client",
-        "pkg": "qbittorrent"
+        "pkg": "qbittorrent",
+        "extra": []
       },
       {
         "name": "Transmission CLI",
         "icon": "transmission",
         "description": "Command Line Bittorrent Client",
-        "pkg": "transmission-cli"
+        "pkg": "transmission-cli",
+        "extra": []
       },
       {
         "name": "Transmission GTK",
         "icon": "transmission",
         "description": "GTK based Bittorrent Client",
-        "pkg": "transmission-gtk"
+        "pkg": "transmission-gtk",
+        "extra": []
       },
       {
         "name": "Transmission Qt",
         "icon": "transmission",
         "description": "QT based Bittorrent Client",
-        "pkg": "transmission-qt"
+        "pkg": "transmission-qt",
+        "extra": []
       }
     ]
   },
   {
-    "name": "Graphics",
+    "name": "Graphics - Create and Edit",
     "icon": "applications-graphics",
     "description": "Photos, Drawings, Image Manipulation",
     "apps": [
@@ -123,207 +162,267 @@
         "name": "GIMP",
         "icon": "gimp",
         "description": "GNU Image Manipulation Program",
-        "pkg": "gimp"
+        "pkg": "gimp",
+        "extra": []
       },
       {
         "name": "Krita",
         "icon": "krita",
         "description": "Digital Art Creation",
-        "pkg": "krita phonon-qt5-gstreamer"
+        "pkg": "krita",
+        "extra": []
       },
       {
         "name": "Pinta",
         "icon": "pinta",
         "description": "Easy create and edit images",
-        "pkg": "pinta"
+        "pkg": "pinta",
+        "extra": []
       },
       {
         "name": "Tux Paint",
         "icon": "tuxpaint",
         "description": "Drawing program for children",
-        "pkg": "tuxpaint"
-      },
+        "pkg": "tuxpaint",
+        "extra": []
+      }
+    ]
+  },
+  {
+    "name": "Graphics - View and Manage",
+    "icon": "applications-graphics",
+    "description": "Photos, Drawings, Image Manipulation",
+    "apps": [
       {
         "name": "Gpicview",
         "icon": "gpicview",
         "description": "Lightweight Image Viewer",
-        "pkg": "gpicview"
+        "pkg": "gpicview",
+        "extra": []
       },
       {
         "name": "gThumb",
         "icon": "gthumb",
         "description": "Gnome Image View and Organize",
-        "pkg": "gthumb"
-      },
-      {
-        "name": "Viewnior",
-        "icon": "viewnior",
-        "description": "GTK based Elegant Image Viewer",
-        "pkg": "viewnior"
+        "pkg": "gthumb",
+        "extra": []
       },
       {
         "name": "Shotwell",
         "icon": "shotwell",
         "description": "GTK based Photo Manager",
-        "pkg": "shotwell"
+        "pkg": "shotwell",
+        "extra": []
+      },
+      {
+        "name": "Viewnior",
+        "icon": "viewnior",
+        "description": "GTK based Elegant Image Viewer",
+        "pkg": "viewnior",
+        "extra": []
       }
     ]
   },
   {
-    "name": "Multimedia",
+    "name": "Multimedia - Video",
     "icon": "applications-multimedia",
     "description": "Music, Movies, Audio, Screencast",
     "apps": [
       {
         "name": "Parole",
         "icon": "parole",
-        "description": "Popular Open Source Media Player",
-        "pkg": "parole"
+        "description": "Multi Media Player",
+        "pkg": "parole",
+        "extra": []
       },
       {
         "name": "VLC",
         "icon": "vlc",
-        "description": "Popular Open Source Media Player",
-        "pkg": "vlc"
+        "description": "Multi Media Player",
+        "pkg": "vlc",
+        "extra": []
       },
       {
         "name": "SM Player",
         "icon": "smplayer",
-        "description": "Popular Open Source Media Player",
-        "pkg": "smplayer"
+        "description": "Multi Media Player",
+        "pkg": "smplayer",
+        "extra": []
       },
       {
         "name": "Totem",
         "icon": "totem",
-        "description": "Popular Open Source Media Player",
-        "pkg": "totem"
-      },
-      {
-        "name": "Audacious",
-        "icon": "audacious",
-        "description": "Popular GTK based Music Player",
-        "pkg": "audacious"
-      },
-      {
-        "name": "Clementine",
-        "icon": "clementine",
-        "description": "Popular GTK based Music Player",
-        "pkg": "clementine"
-      },
-      {
-        "name": "Ristretto",
-        "icon": "ristretto",
-        "description": "Music Player",
-        "pkg": "ristretto"
-      },
-      {
-        "name": "Audacity",
-        "icon": "audacity",
-        "description": "Record and Edit Audio files",
-        "pkg": "audacity"
-      },
-      {
-        "name": "DeadBeeF",
-        "icon": "deadbeef",
-        "description": "Music Player",
-        "pkg": "parole"
-      },
-      {
-        "name": "Simple Screen Recorder",
-        "icon": "simple-ccsm",
-        "description": "Screen Capturing Application",
-        "pkg": "simplescreenrecorder"
-      },
-      {
-        "name": "Kdenlive",
-        "icon": "kdenlive",
-        "description": "Video Editing Application",
-        "pkg": "kdenlive"
-      },
-      {
-        "name": "OBS Studio",
-        "icon": "obs",
-        "description": "Open Source Streaming/Recording Application",
-        "pkg": "obs-studio"
+        "description": "Video Media Player",
+        "pkg": "totem",
+        "extra": []
       },
       {
         "name": "Kodi",
         "icon": "kodi",
         "description": "Kodi Media Suite",
-        "pkg": "kodi"
+        "pkg": "kodi",
+        "extra": []
       }
     ]
   },
   {
-    "name": "Office",
+    "name": "Multimedia - Audio",
+    "icon": "applications-multimedia",
+    "description": "Music players",
+    "apps": [
+      {
+        "name": "Audacious",
+        "icon": "audacious",
+        "description": "Popular GTK based Music Player",
+        "pkg": "audacious",
+        "extra": []
+      },
+      {
+        "name": "Clementine",
+        "icon": "clementine",
+        "description": "Popular GTK based Music Player",
+        "pkg": "clementine",
+        "extra": []
+      },
+      {
+        "name": "DeadBeeF",
+        "icon": "deadbeef",
+        "description": "Music Player",
+        "pkg": "deadbeef",
+        "extra": []
+      },
+      {
+        "name": "Ristretto",
+        "icon": "ristretto",
+        "description": "Music Player",
+        "pkg": "ristretto",
+        "extra": []
+      }
+    ]
+  },
+  {
+    "name": "Multimedia - Editing",
+    "icon": "applications-multimedia",
+    "description": "Edit, Record, Stream",
+    "apps": [
+      {
+        "name": "Audacity",
+        "icon": "audacity",
+        "description": "Record and Edit Audio files",
+        "pkg": "audacity",
+        "extra": []
+      },
+      {
+        "name": "Kdenlive",
+        "icon": "kdenlive",
+        "description": "Video Editing Application",
+        "pkg": "kdenlive",
+        "extra": []
+      },
+      {
+        "name": "OBS Studio",
+        "icon": "obs",
+        "description": "Open Source Streaming/Recording Application",
+        "pkg": "obs-studio",
+        "extra": []
+      },
+      {
+        "name": "Simple Screen Recorder",
+        "icon": "simple-ccsm",
+        "description": "Screen Capturing Application",
+        "pkg": "simplescreenrecorder",
+        "extra": []
+      }
+    ]
+  },
+  {
+    "name": "Office - Suites",
     "icon": "applications-office",
     "description": "Office Apps, PDF view/edit, EPub",
     "apps": [
       {
-        "name": "Qpdfview",
-        "icon": "qpdfview",
-        "description": "Qt based PDF Viewer",
-        "pkg": "qpdfview"
-      },
-      {
-        "name": "Epdfview",
-        "icon": "qpdfview",
-        "description": "GTK based PDF Viewer",
-        "pkg": "epdfview"
+        "name": "Calligra Office",
+        "icon": "calligrawords",
+        "description": "Qt Based Office Suite",
+        "pkg": "calligra",
+        "extra": []
       },
       {
         "name": "Libre Office (Fresh)",
         "icon": "libreoffice-main",
-        "description": "Open Source Office Application (Fresh)",
-        "pkg": "libreoffice-fresh"
+        "description": "Open Source Office Application (Lastest)",
+        "pkg": "libreoffice-fresh",
+        "extra": []
       },
       {
         "name": "Libre Office (Still)",
         "icon": "libreoffice-main",
-        "description": "Open Source Office Application (Still)",
-        "pkg": "libreoffice-still"
-      },
-      {
-        "name": "Calligra Office",
-        "icon": "calligrawords",
-        "description": "Qt Based Office Suite",
-        "pkg": "calligra"
-      },
+        "description": "Open Source Office Application (Stable)",
+        "pkg": "libreoffice-still",
+        "extra": []
+      }
+    ]
+  },
+  {
+    "name": "Office - Stand Alone",
+    "icon": "applications-office",
+    "description": "Office Apps, PDF view/edit, EPub",
+    "apps": [
       {
         "name": "Abiword",
         "icon": "abiword",
         "description": "Word Document Application",
-        "pkg": "abiword"
-      },
-      {
-        "name": "Gnumeric",
-        "icon": "gnumeric",
-        "description": "Spreadsheet Application",
-        "pkg": "gnumeric"
-      },
-      {
-        "name": "PDFMod",
-        "icon": "pdfmod",
-        "description": "PDF Management Application",
-        "pkg": "pdfmod"
-      },
-      {
-        "name": "Evince",
-        "icon": "evince",
-        "description": "PDF Viewing Application",
-        "pkg": "evince"
+        "pkg": "abiword",
+        "extra": []
       },
       {
         "name": "Calibre",
         "icon": "calibre-viewer",
         "description": "Qt based E-Book Reader",
-        "pkg": "calibre"
+        "pkg": "calibre",
+        "extra": []
+      },
+      {
+        "name": "Epdfview",
+        "icon": "qpdfview",
+        "description": "GTK based PDF Viewer",
+        "pkg": "epdfview",
+        "extra": []
+      },
+      {
+        "name": "Evince",
+        "icon": "evince",
+        "description": "PDF Viewing Application",
+        "pkg": "evince",
+        "extra": []
       },
       {
         "name": "FBReader",
         "icon": "fbreader",
         "description": "GTK based E-Book Reader",
-        "pkg": "fbreader"
+        "pkg": "fbreader",
+        "extra": []
+      },
+      {
+        "name": "Gnumeric",
+        "icon": "gnumeric",
+        "description": "Spreadsheet Application",
+        "pkg": "gnumeric",
+        "extra": []
+      },
+      {
+        "name": "PDFMod",
+        "icon": "pdfmod",
+        "description": "PDF Management Application",
+        "pkg": "pdfmod",
+        "extra": []
+      },
+      {
+        "name": "Qpdfview",
+        "icon": "qpdfview",
+        "description": "Qt based PDF Viewer",
+        "pkg": "qpdfview",
+        "extra": []
       }
     ]
   }
